--- a/CSS/home.css
+++ b/CSS/home.css
@@ -42,3 +42,68 @@ body {
     color: white;
     font-size: 35px;
   }
+  .advertise img
+  {
+    margin:20px 0px;
+    height: 510px;
+    width: 100%;
+    
+
+
+  }
+  .advertise {
+    position: relative;
+  }
+  
+  .blurry-image {
+    position: relative;
+  }
+  
+  .blurry-image img {
+    width: 100%;
+    filter: blur(5px); /* Adjust the blur amount as needed */
+  }
+  
+  .text-overlay {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: white;
+  }
+  #calendar
+  {
+    width: 50%;
+    margin: 30px 100px;
+
+   
+    
+  }
+  
+  .text-overlay h2 {
+    font-size: 24px;
+    margin-bottom: 10px;
+  }
+  
+  .text-overlay p {
+    font-size: 16px;
+  }
+  .btn {
+    padding: 10px 20px;
+    background-color: #007bff; /* Blue color, you can change it to fit your design */
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s ease;
+  }
+  
+  .btn:hover {
+    background-color: #0056b3; /* Darker shade of blue on hover, adjust as needed */
+  }
+  
+  
+
+  
